--- a/test-output/index.html
+++ b/test-output/index.html
@@ -170,8 +170,8 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;-1&quot; guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
   &lt;test name=&quot;Chrome&quot;&gt;
-    &lt;parameter name=&quot;rm&quot; value=&quot;local&quot;/&gt;
-    &lt;parameter name=&quot;bn&quot; value=&quot;Chrome&quot;/&gt;
+    &lt;parameter name=&quot;rm&quot; value=&quot;remote&quot;/&gt;
+    &lt;parameter name=&quot;bn&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.expedia.adnatebeta.testrunner.NTRunnerTest&quot;&gt;
         &lt;methods&gt;
@@ -221,22 +221,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyFlightDetailsHeading')
+data.setCell(0, 1, 'VerifyRegistrationProcess')
 data.setCell(0, 2, 'com.expedia.adnatebeta.testrunner.NTRunnerTest')
-data.setCell(0, 3, 3993);
+data.setCell(0, 3, 86929);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'VerifyRegistrationProcess')
+data.setCell(1, 1, 'VerifyFlightDetailsHeading')
 data.setCell(1, 2, 'com.expedia.adnatebeta.testrunner.NTRunnerTest')
-data.setCell(1, 3, 3378);
+data.setCell(1, 3, 6228);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'VerifyPageTitle')
 data.setCell(2, 2, 'com.expedia.adnatebeta.testrunner.NTRunnerTest')
-data.setCell(2, 3, 13);
+data.setCell(2, 3, 28);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -264,7 +264,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.expedia.adnatebeta.testrunner.NTRunnerTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">getTestInput(Chrome, local)</span>
+                <span class="method-name">getTestInput(chrome, remote)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
@@ -273,35 +273,35 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyPageTitle(Welcome: Mercury Tours, 1)</span>
-                <span class="method-start">5051 ms</span>
+                <span class="method-start">69386 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">5065 ms</span>
+                <span class="method-start">69415 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">preCondition</span>
-                <span class="method-start">5149 ms</span>
+                <span class="method-start">69630 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyFlightDetailsHeading([tutorial, tutorial, Flight Details, 3])</span>
-                <span class="method-start">8107 ms</span>
+                <span class="method-start">138491 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">12101 ms</span>
+                <span class="method-start">144721 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">preCondition</span>
-                <span class="method-start">12184 ms</span>
+                <span class="method-start">144854 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyRegistrationProcess([Aditya, Bharadwaj, 9916020910, aditya@ad.com, Lotus, Bangalore, Karnataka, 560083, India, adzee, pw...)</span>
-                <span class="method-start">15033 ms</span>
+                <span class="method-start">217442 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">18411 ms</span>
+                <span class="method-start">304372 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
