--- a/test-output/index.html
+++ b/test-output/index.html
@@ -223,11 +223,11 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'VerifyRegistrationProcess')
 data.setCell(0, 2, 'com.expedia.adnatebeta.testrunner.NTRunnerTest')
-data.setCell(0, 3, 86929);
+data.setCell(0, 3, 19662);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'VerifyFlightDetailsHeading')
 data.setCell(1, 2, 'com.expedia.adnatebeta.testrunner.NTRunnerTest')
-data.setCell(1, 3, 6228);
+data.setCell(1, 3, 17605);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'VerifyPageTitle')
 data.setCell(2, 2, 'com.expedia.adnatebeta.testrunner.NTRunnerTest')
@@ -236,7 +236,7 @@ window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 37 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -269,39 +269,39 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">preCondition</span>
-                <span class="method-start">424 ms</span>
+                <span class="method-start">427 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyPageTitle(Welcome: Mercury Tours, 1)</span>
-                <span class="method-start">69386 ms</span>
+                <span class="method-start">69840 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">69415 ms</span>
+                <span class="method-start">69870 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">preCondition</span>
-                <span class="method-start">69630 ms</span>
+                <span class="method-start">70024 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyFlightDetailsHeading([tutorial, tutorial, Flight Details, 3])</span>
-                <span class="method-start">138491 ms</span>
+                <span class="method-start">140067 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">144721 ms</span>
+                <span class="method-start">157673 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">preCondition</span>
-                <span class="method-start">144854 ms</span>
+                <span class="method-start">157858 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyRegistrationProcess([Aditya, Bharadwaj, 9916020910, aditya@ad.com, Lotus, Bangalore, Karnataka, 560083, India, adzee, pw...)</span>
-                <span class="method-start">217442 ms</span>
+                <span class="method-start">228026 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">304372 ms</span>
+                <span class="method-start">247689 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
